force-app/main/default/objects/Wallet__c/fields/Monetary_Unit__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Unit__c</fullName>
    <label>Monetary_Unit</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>