force-app/main/default/objects/Wallet__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total_Expenses</label>
    <summarizedField>Expense__c.Value__c</summarizedField>
    <summaryForeignKey>Expense__c.ValletId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>