force-app/main/default/objects/Wallet__c/fields/Total_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Total_Receipts__c</fullName>
    <label>Total_Receipts</label>
    <summarizedField>Reciept__c.Value__c</summarizedField>
    <summaryForeignKey>Reciept__c.ValletId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>