force-app/main/default/objects/Wallet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency__c</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>